# Audio-Editor

./: ARCHITECTURES.md  CMakeLists.txt  README.md  main.cpp
Core/: AudioClip.cpp  AudioClip.h  Caption.h  Constants.h  EffectFactory.cpp  EffectFactory.h  Error.h
Core/Adapters/: AudioFileAdapter.h  Mp3.cpp  Mp3.h
Core/Commands/: ApplyEffect.cpp  ApplyEffect.h  CommandHistory.cpp  CommandHistory.h  EffectState.h  EffectStateCommand.cpp  EffectStateCommand.h  ICommand.h
Core/Effects/: IEffect.h  Normalize.cpp  Normalize.h  Reverb.cpp  Reverb.h  Speed.cpp  Speed.h  Volume.cpp  Volume.h
Core/Logging/: CompositeLogger.cpp  CompositeLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h
Core/Services/: CaptionParser.cpp  CaptionParser.h
GUI/: AudioEngine.cpp  AudioEngine.h  CaptionPanel.cpp  CaptionPanel.h  EffectWidget.cpp  EffectWidget.h  EffectsPanel.cpp  EffectsPanel.h  MainWindow.cpp  MainWindow.h  TransportBar.cpp  TransportBar.h  WaveformWidget.cpp  WaveformWidget.h
Samples/: example.srt
